add user id in add session to integration body
