# api/docs/swagger.json
@@ -1294,13 +1294,13 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/auth_service.AddSessionToIntegrationResponse"
+                            "$ref": "#/definitions/auth_service.AddSessionToIntegrationRequest"
                         }
                     }
                 ],
                 "responses": {
                     "201": {
-                        "description": "Integration Session Response",
+                        "description": "Add Session To Integration Response",
                         "schema": {
                             "allOf": [
                                 {
@@ -1310,7 +1310,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/auth_service.Session"
+                                            "$ref": "#/definitions/auth_service.AddSessionToIntegrationResponse"
                                         }
                                     }
                                 }
@@ -4461,6 +4461,23 @@
                     "type": "string"
                 },
                 "project_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "auth_service.AddSessionToIntegrationRequest": {
+            "type": "object",
+            "properties": {
+                "expires_at": {
+                    "type": "string"
+                },
+                "integration_id": {
+                    "type": "string"
+                },
+                "secret_key": {
+                    "type": "string"
+                },
+                "user_id": {
                     "type": "string"
                 }
             }
